--- a/QOBDManagement/QOBD/Views/ItemSideBarView.xaml
+++ b/QOBDManagement/QOBD/Views/ItemSideBarView.xaml
@@ -40,7 +40,7 @@
                                             Command="{Binding ItemViewModel.ItemSideBarViewModel.SetupItemCommand}"
                                             CommandParameter="new-item" ToolTip="Add New Item" HorizontalContentAlignment="Left">
                                             <StackPanel Orientation="Horizontal">
-                                                <Border CornerRadius="3" Background="{Binding ItemViewModel.ItemSideBarViewModel.TxtIconColour}" Padding="2" >
+                                                <Border CornerRadius="3" Background="{Binding ItemViewModel.TxtIconColour}" Padding="2" >
                                                     <materialDesign:PackIcon Kind="BasketFill" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="WhiteSmoke"/>
                                                 </Border>
                                                 <TextBlock Margin="8 0 0 0">Create Item</TextBlock>
@@ -60,7 +60,7 @@
                                         Command="{Binding ItemViewModel.ItemSideBarViewModel.UtilitiesCommand}"
                                         CommandParameter="catalogue" HorizontalContentAlignment="Left">
                                             <StackPanel Orientation="Horizontal">
-                                                <Border CornerRadius="3" Background="{Binding ItemViewModel.ItemSideBarViewModel.TxtIconColour}" Padding="2" >
+                                                <Border CornerRadius="3" Background="{Binding ItemViewModel.TxtIconColour}" Padding="2" >
                                                     <materialDesign:PackIcon Kind="Home" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="WhiteSmoke"/>
                                                 </Border>
                                                 <TextBlock Margin="8 0 0 0">Catalogue</TextBlock>
@@ -72,7 +72,7 @@
                                         Command="{Binding ItemViewModel.ItemSideBarViewModel.UtilitiesCommand}"
                                         CommandParameter="provider" HorizontalContentAlignment="Left">
                                             <StackPanel Orientation="Horizontal">
-                                                <Border CornerRadius="3" Background="{Binding ItemViewModel.ItemSideBarViewModel.TxtIconColour}" Padding="2" >
+                                                <Border CornerRadius="3" Background="{Binding ItemViewModel.TxtIconColour}" Padding="2" >
                                                     <materialDesign:PackIcon Kind="Blender" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="WhiteSmoke"/>
                                                 </Border>
                                                 <TextBlock Margin="8 0 0 0">Providers</TextBlock>
