--- a/QOBDManagement/QOBD/Views/ItemView.xaml
+++ b/QOBDManagement/QOBD/Views/ItemView.xaml
@@ -8,6 +8,7 @@
              xmlns:system="clr-namespace:System;assembly=mscorlib" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:ViewModel="clr-namespace:QOBDViewModels.ViewModel;assembly=QOBDViewModels"
+             xmlns:Interfaces="clr-namespace:QOBDViewModels.Interfaces;assembly=QOBDViewModels"
              xmlns:Class="clr-namespace:QOBDModels.Classes;assembly=QOBDModels"
              xmlns:Views="clr-namespace:QOBD.Views"
              xmlns:Main="clr-namespace:QOBD"
