--- a/QOBDManagement/QOBD/Views/OrderView.xaml
+++ b/QOBDManagement/QOBD/Views/OrderView.xaml
@@ -7,6 +7,7 @@
              xmlns:local="clr-namespace:QOBD.Views"
              xmlns:system="clr-namespace:System;assembly=mscorlib"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:Interfaces="clr-namespace:QOBDViewModels.Interfaces;assembly=QOBDViewModels"
              xmlns:ViewModel="clr-namespace:QOBDViewModels.ViewModel;assembly=QOBDViewModels"
              xmlns:Views="clr-namespace:QOBD.Views"
              xmlns:Main="clr-namespace:QOBD"
